# sample-go-bzlmod

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  go.mod  main.go
.github/workflows/: sample.yaml
app/: BUILD.bazel  go.mod  go.sum
app/client/: BUILD.bazel  embed.go  index.html
app/cmd/: BUILD.bazel  main.go
app/server/: BUILD.bazel  api.gen.go  server.go
front/: BUILD.bazel  Main.elm  embed.go  index.html
