load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(name = "gazelle")

go_library(
    name = "sample-go-bzlmod_lib",
    srcs = ["main.go"],
    embedsrcs = ["index.html"],
    importpath = "github.com/matsubara0507/sample-go-bzlmod",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
    ],
)

go_binary(
    name = "sample-go-bzlmod",
    embed = [":sample-go-bzlmod_lib"],
    visibility = ["//visibility:public"],
)

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

pkg_tar(
    name = "tar",
    srcs = [":sample-go-bzlmod"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    tars = [":tar"],
    entrypoint = ["/sample-go-bzlmod"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["sample-go-bzlmod:latest"],
)
