load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

gazelle(name = "gazelle")

go_library(
    name = "sample-go-bzlmod_lib",
    srcs = ["main.go"],
    importpath = "github.com/matsubara0507/sample-go-bzlmod",
    visibility = ["//visibility:private"],
    deps = [
        "//front",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
    ],
)

go_binary(
    name = "sample-go-bzlmod",
    embed = [":sample-go-bzlmod_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":sample-go-bzlmod"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/sample-go-bzlmod"],
    tars = [":tar"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["sample-go-bzlmod:latest"],
)
